--- a/allot_zone/pubspec.yaml
+++ b/allot_zone/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
+  firebase_auth: ^4.2.4
 
 dev_dependencies:
   flutter_test:
@@ -79,10 +80,10 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Nexa
+    - family: Monsterrat
       fonts:
-        - asset: assets/fonts/Nexa-Trial-Regular.ttf
-        - asset: assets/fonts/Nexa-Trial-Thin.ttf
+        - asset: assets/fonts/Montserrat-Regular.ttf
+        - asset: assets/fonts/Montserrat-Light.ttf
   
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
