--- a/allot_zone/pubspec.yaml
+++ b/allot_zone/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.4.1
   cloud_firestore: ^4.3.1
   firebase_auth: ^4.2.4
+  email_validator: '^2.1.16'
 
 dev_dependencies:
   flutter_test:
