--- a/allot_zone/pubspec.yaml
+++ b/allot_zone/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.3.1
   firebase_auth: ^4.2.4
   email_validator: '^2.1.16'
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
